--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,6 @@
+const path = require('path');
 
-import path from 'path';
-
-export default{
+module.exports = {
   config: path.resolve('config', 'config.js'),
   'models-path': path.resolve('db', 'models'),
   'seeders-path': path.resolve('db', 'seeders'),
